<resources>
    <string name="PM25">PM2.5</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="absolute_humidity">g/m³ - Absolute humidity</string>
    <string name="agreement">User Agreement</string>
    <string name="api_accu_weather_01">Sunny</string>
    <string name="api_accu_weather_02">Mostly Sunny</string>
    <string name="api_accu_weather_03">Partly Sunny</string>
    <string name="api_accu_weather_04">Intermittent Clouds</string>
    <string name="api_accu_weather_05">Hazy Sunshine</string>
    <string name="api_accu_weather_06">Mostly Cloudy</string>
    <string name="api_accu_weather_07">Cloudy</string>
    <string name="api_accu_weather_08">Dreary (Overcast)</string>
    <string name="api_accu_weather_11">Fog</string>
    <string name="api_accu_weather_12">Showers</string>
    <string name="api_accu_weather_13">Mostly Cloudy w/ Showers</string>
    <string name="api_accu_weather_14">Partly Sunny w/ Showers</string>
    <string name="api_accu_weather_15">T-Storms</string>
    <string name="api_accu_weather_16">Mostly Cloudy w/ T-Storms</string>
    <string name="api_accu_weather_17">Partly Sunny w/ T-Storms</string>
    <string name="api_accu_weather_18">Rain</string>
    <string name="api_accu_weather_19">Flurries</string>
    <string name="api_accu_weather_20">Mostly Cloudy w/ Flurries</string>
    <string name="api_accu_weather_21">Partly Sunny w/ Flurries</string>
    <string name="api_accu_weather_22">Snow</string>
    <string name="api_accu_weather_23">Mostly Cloudy w/ Snow</string>
    <string name="api_accu_weather_24">Ice</string>
    <string name="api_accu_weather_25">Sleet</string>
    <string name="api_accu_weather_26">Freezing Rain</string>
    <string name="api_accu_weather_29">Rain and Snow</string>
    <string name="api_accu_weather_30">Hot</string>
    <string name="api_accu_weather_31">Cold</string>
    <string name="api_accu_weather_32">Windy</string>
    <string name="api_accu_weather_33">Clear</string>
    <string name="api_accu_weather_34">Mostly Clear</string>
    <string name="api_accu_weather_35">Partly Cloudy</string>
    <string name="api_accu_weather_36">Intermittent Clouds</string>
    <string name="api_accu_weather_37">Hazy Moonlight</string>
    <string name="api_accu_weather_38">Mostly Cloudy</string>
    <string name="api_accu_weather_39">Partly Cloudy w/ Showers</string>
    <string name="api_accu_weather_40">Mostly Cloudy w/ Showers</string>
    <string name="api_accu_weather_41">Partly Cloudy w/ T-Storms</string>
    <string name="api_accu_weather_42">Mostly Cloudy w/ T-Storms</string>
    <string name="api_accu_weather_43">Mostly Cloudy w/ Flurries</string>
    <string name="api_accu_weather_44">Mostly Cloudy w/ Snow</string>
    <string name="api_aqi_level_five">heavily pollution</string>
    <string name="api_aqi_level_four">moderate pollution</string>
    <string name="api_aqi_level_na">no data</string>
    <string name="api_aqi_level_one">excellent</string>
    <string name="api_aqi_level_six">severe pollution</string>
    <string name="api_aqi_level_three">mild pollution</string>
    <string name="api_aqi_level_two">fine</string>
    <string name="api_china_weather_00">Sunny</string>
    <string name="api_china_weather_01">Cloudy</string>
    <string name="api_china_weather_02">Overcast</string>
    <string name="api_china_weather_03">Shower</string>
    <string name="api_china_weather_04">Thundershower</string>
    <string name="api_china_weather_05">Thundershower with hail</string>
    <string name="api_china_weather_06">Sleet</string>
    <string name="api_china_weather_07">Light rain</string>
    <string name="api_china_weather_08">Moderate rain</string>
    <string name="api_china_weather_09">Heavy rain</string>
    <string name="api_china_weather_10">storm</string>
    <string name="api_china_weather_11">Heavy storm</string>
    <string name="api_china_weather_12">Severe storm</string>
    <string name="api_china_weather_13">Snow flurry</string>
    <string name="api_china_weather_14">Light snow</string>
    <string name="api_china_weather_15">Moderate snow</string>
    <string name="api_china_weather_16">Heavy snow</string>
    <string name="api_china_weather_17">Snowstorm</string>
    <string name="api_china_weather_18">Foggy</string>
    <string name="api_china_weather_19">Ice rain</string>
    <string name="api_china_weather_20">Duststorm</string>
    <string name="api_china_weather_21">Light to moderate rain</string>
    <string name="api_china_weather_22">Moderate to heavy rain</string>
    <string name="api_china_weather_23">Heavy rain to storm</string>
    <string name="api_china_weather_24">Storm to heavy storm</string>
    <string name="api_china_weather_25">Heavy to severe storm</string>
    <string name="api_china_weather_26">Light to moderate snow</string>
    <string name="api_china_weather_27">Moderate to heavy snow</string>
    <string name="api_china_weather_28">Heavy snow to snowstorm</string>
    <string name="api_china_weather_29">Dust</string>
    <string name="api_china_weather_30">Sand</string>
    <string name="api_china_weather_31">Sandstorm</string>
    <string name="api_china_weather_32">Dense fog</string>
    <string name="api_china_weather_33">Snow</string>
    <string name="api_china_weather_49">Very dense fog</string>
    <string name="api_china_weather_53">Haze</string>
    <string name="api_china_weather_54">Moderate haze</string>
    <string name="api_china_weather_55">Heavy haze</string>
    <string name="api_china_weather_56">Severe haze</string>
    <string name="api_china_weather_57">Heavy fog</string>
    <string name="api_china_weather_58">Extremely dense fog</string>
    <string name="api_km">KM</string>
    <string name="api_m">M</string>
    <string name="api_pressure">hPa</string>
    <string name="api_weather_description_cloudy">Cloudy</string>
    <string name="api_weather_description_downpour">Downpour</string>
    <string name="api_weather_description_drizzle">Drizzle</string>
    <string name="api_weather_description_flurry">Flurry</string>
    <string name="api_weather_description_fog">Fog</string>
    <string name="api_weather_description_hail">Hail</string>
    <string name="api_weather_description_haze">Haze</string>
    <string name="api_weather_description_overcast">Overcast</string>
    <string name="api_weather_description_rain">Rain</string>
    <string name="api_weather_description_rainstorm">Rainstorm</string>
    <string name="api_weather_description_sandstorm">Sandstorm</string>
    <string name="api_weather_description_shower">Shower</string>
    <string name="api_weather_description_sleet">Sleet</string>
    <string name="api_weather_description_snow">Snow</string>
    <string name="api_weather_description_snowstorm">Snowstorm</string>
    <string name="api_weather_description_sunny">Clear</string>
    <string name="api_weather_description_sunny_intervals">Sunny intervals</string>
    <string name="api_weather_description_thundershower">Thundershower</string>
    <string name="api_weather_description_typhoon">Typhoon</string>
    <string name="api_weather_description_unknown">Unknown</string>
    <string name="api_weather_unknown">Unknown</string>
    <string name="api_wind_direction_e">East wind</string>
    <string name="api_wind_direction_ene">ENE wind</string>
    <string name="api_wind_direction_ese">ESE wind</string>
    <string name="api_wind_direction_n">North wind</string>
    <string name="api_wind_direction_na">No sustained wind direction</string>
    <string name="api_wind_direction_ne">NE wind</string>
    <string name="api_wind_direction_nne">NNE wind</string>
    <string name="api_wind_direction_nw">NW wind</string>
    <string name="api_wind_direction_nwn">NNW wind</string>
    <string name="api_wind_direction_rw">Swirling wind</string>
    <string name="api_wind_direction_s">South wind</string>
    <string name="api_wind_direction_se">SE wind</string>
    <string name="api_wind_direction_sse">SSE wind</string>
    <string name="api_wind_direction_ssw">SSW wind</string>
    <string name="api_wind_direction_sw">SW wind</string>
    <string name="api_wind_direction_w">West wind</string>
    <string name="api_wind_direction_wnw">WNW wind</string>
    <string name="api_wind_direction_wsw">WSW wind</string>
    <string name="api_wind_power_level_eight">Level 10–11</string>
    <string name="api_wind_power_level_five">Level 7–8</string>
    <string name="api_wind_power_level_four">Level 6–7</string>
    <string name="api_wind_power_level_nine">Level 11–12</string>
    <string name="api_wind_power_level_one">Level 3–4</string>
    <string name="back_button_label">Back</string>
    <string name="c">℃</string>
    <string name="check_new_version">Check new version</string>
    <string name="china_weather">Weather data is provided by Chinese Weather Network</string>
    <string name="copyright">©2015–2018, OnePlus. All Rights Reserved.</string>
    <string name="f">℉</string>
    <string name="feedback">Feedback</string>
    <string name="gm">g/m³</string>
    <string name="humidity">Humidity</string>
    <string name="kmh">km/h</string>
    <string name="menu_city_list">City List</string>
    <string name="menu_warning">Warning</string>
    <string name="next_button_label">Next</string>
    <string name="percent">%</string>
    <string name="pmh">mph</string>
    <string name="share">Share</string>
    <string name="skip_button_label">Skip</string>
    <string name="temperature">Temperature</string>
    <string name="the_weather_warn">Weather alert</string>
    <string name="title_settings">Settings</string>
    <string name="warn_tips">Unusual weather alert</string>
    <string name="wind">Wind</string>
</resources>