<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item n1:icon="@drawable/ic_warn" n1:id="@id/action_warning" n1:visible="false" n1:title="@string/menu_warning" n2:showAsAction="always"
      xmlns:n1="http://schemas.android.com/apk/res/android" xmlns:n2="http://schemas.android.com/apk/res-auto" />
    <item n3:icon="@drawable/ic_city" n3:id="@id/action_cities" n3:title="@string/menu_city_list" n4:showAsAction="always"
      xmlns:n3="http://schemas.android.com/apk/res/android" xmlns:n4="http://schemas.android.com/apk/res-auto" />
    <item n5:id="@id/popup_menu_share" n5:title="@string/share" n6:showAsAction="never"
      xmlns:n5="http://schemas.android.com/apk/res/android" xmlns:n6="http://schemas.android.com/apk/res-auto" />
    <item n7:id="@id/popup_menu_settings" n7:title="@string/title_settings" n8:showAsAction="never"
      xmlns:n7="http://schemas.android.com/apk/res/android" xmlns:n8="http://schemas.android.com/apk/res-auto" />
</menu>