<?xml version="1.0" encoding="utf-8"?>
<LinearLayout n1:orientation="vertical" n1:layout_width="fill_parent" n1:layout_height="fill_parent"
  xmlns:n1="http://schemas.android.com/apk/res/android">
    <LinearLayout n1:orientation="horizontal" n1:layout_width="fill_parent" n1:layout_height="0.0px" n1:layout_weight="1.0">
        <LinearLayout n1:orientation="vertical" n1:id="@id/headers" n1:background="?android:windowBackground" n1:layout_width="0.0px" n1:layout_height="fill_parent" n1:layout_weight="@integer/preferences_left_pane_weight" n1:elevation="4.0dip" style="?op_preferenceHeaderPanelStyle">
            <ListView n1:listPreferredItemHeight="48.0dip" n1:scrollbarAlwaysDrawVerticalTrack="true" n1:id="@android:id/list" n1:clipToPadding="false" n1:layout_width="fill_parent" n1:layout_height="0.0px" n1:drawSelectorOnTop="false" n1:cacheColorHint="@color/transparent" n1:divider="@null" n1:layout_weight="1.0" style="?op_preferenceListStyle" />
            <FrameLayout n1:id="@id/list_footer" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_weight="0.0" />
        </LinearLayout>
        <LinearLayout n1:orientation="vertical" n1:id="@id/prefs_frame" n1:visibility="gone" n1:layout_width="0.0px" n1:layout_height="fill_parent" n1:layout_weight="@integer/preferences_right_pane_weight" style="?op_preferencePanelStyle">
            <include layout="@layout/breadcrumbs_in_fragment_material" />
            <android.preference.PreferenceFrameLayout n1:id="@id/prefs" n1:layout_width="fill_parent" n1:layout_height="0.0dip" n1:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout n1:id="@id/button_bar" n1:visibility="gone" n1:layout_width="fill_parent" n1:layout_height="wrap_content" n1:layout_weight="0.0">
        <Button n1:id="@id/back_button" n1:layout_width="150.0dip" n1:layout_height="wrap_content" n1:layout_margin="5.0dip" n1:text="@string/back_button_label" n1:layout_alignParentStart="true" />
        <LinearLayout n1:orientation="horizontal" n1:layout_width="wrap_content" n1:layout_height="wrap_content" n1:layout_alignParentEnd="true">
            <Button n1:id="@id/skip_button" n1:visibility="gone" n1:layout_width="150.0dip" n1:layout_height="wrap_content" n1:layout_margin="5.0dip" n1:text="@string/skip_button_label" />
            <Button n1:id="@id/next_button" n1:layout_width="150.0dip" n1:layout_height="wrap_content" n1:layout_margin="5.0dip" n1:text="@string/next_button_label" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>